feat: add MySQL support; update database configuration and schema; refactor application properties